libs/preprocessor/tests/errors/pe4_unknown_directive/stderr.ansi
[0m[1m[38;5;9merror[PE4][0m[1m: unknown directive[0m
  [0m[36m┌─[0m source.hpp:1:2
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #[0m[31mnothing[0m
  [0m[36m│[0m  [0m[31m^^^^^^^[0m [0m[31munknown directive `nothing`[0m

